--- a/qros-storage/README
+++ b/qros-storage/README
@@ -3,15 +3,25 @@ This is a convergent repository for various qr code data storage projects with t
 
 The following will gzip, base64 encode, split into chunks, write all data to the 'chunks.json' file, create qr codes and a qr code video file for the 'Virtual_Forest_Epoch_Rising.txt' file.
 
+...
 python3 qros-builder-full
+...
+
+Please note there is a 'chunks.json' example located here:
+
+https://github.com/txtatech/qros-storage/blob/main/qros-storage/example_outputs/chunks.json
 
 The following will read the .png qr codes and create ASCII art qr codes:
 
+...
 bash qr-png-ascii-convert.sh
+...
 
 The final bash script will concatenate the individual ASCII art qr codes into a single text file and add the required padding:
 
+...
 bash ablob-padding.sh
+...
 
 # Related Projects:
 
