--- a/qros-storage/README
+++ b/qros-storage/README
@@ -1,7 +1,23 @@
 # qros-storage
-This is a convergent repository for various qr code data storage projects with the goal of creating a single qr code storage solution.
+This is a convergent repository for various qr code data storage projects with the goal of creating a single qr code (and text-based) storage solution.
 
-The following will gzip, base64 encode, split into chunks, write all data to the 'chunks.json' file, create qr codes and a qr code video file for the 'Virtual_Forest_Epoch_Rising.txt' file.
+# The following Python script will do the following to the data of the specified file:
+
+gzip the data, 
+
+base64 encode the data,
+
+split the data into chunks,
+
+write all data to the 'chunks.json' file,
+
+create .png qr codes of the data chinks,
+
+create a qr code video file of the data,
+
+recreate the 'Virtual_Forest_Epoch_Rising.txt' file.
+
+# Usage:
 
 python3 qros-builder-full
 
@@ -81,3 +97,13 @@ A fractal encoding framework written in Python that generates fractal images bas
 https://github.com/txtatech/fractal-encoder
 
 A fractal encoding framework for fractal encoding text, lattice structuring, ASCII art qr code generation, 3D QR code and fractal grid generation plus mappings for programmable terrain.
+
+# virtual-forest/game_instance_sandbox/djinn-dna 
+
+This is a sub-project of the [virtual-forest](https://github.com/txtatech/virtual-forest) project.
+
+The DNA encoding framework source files are in 'game_instance_sandbox/djinn-dna':
+
+https://github.com/txtatech/virtual-forest/tree/main/virtual-forest/game_instance_sandbox/djinn-dna
+
+Djinn-DNA Note: The README-DNA.txt explains the steps involved.
